--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This project is seriously awesome, you guys.
+This project is seriously awesome, you guys. USE IT!
 
 This project will help Treehouse students learn about working with Git repositories.
